--- a/frontend/landing/package.json
+++ b/frontend/landing/package.json
@@ -17,8 +17,10 @@
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "openai": "^6.10.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
