--- a/frontend/landing/package.json
+++ b/frontend/landing/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.0.7",
     "openai": "^6.10.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
