feat: Implement LLM-based product search and filtering in Agro Shop Agent
- Added LLMService for extracting search parameters and filtering product results.
- Created models for Product, Brand, Pagination, and SearchResultData.
- Developed TexnomartSearchService for querying Texnomart API.
- Introduced ShopService to orchestrate product search and insights generation.
- Implemented Flask controller for handling product search requests.
- Added JSON prompts for LLM interactions to optimize search queries and filter results.
- Seed data script created for populating the database with test data.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "markupsafe==3.0.3",
     "mypy>=1.19.0",
     "mypy-extensions==1.1.0",
+    "numpy>=2.3.5",
     "openai==2.8.1",
     "orjson==3.11.4",
     "packaging==25.0",
