--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.17.2
 annotated-types==0.7.0
 anyio==4.11.0
+attrs==25.4.0
 beautifulsoup4==4.14.2
 black==25.11.0
 blinker==1.9.0
@@ -8,10 +9,12 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
 distro==1.9.0
+flasgger==0.9.7.1
 flask==3.1.2
 flask-cors==6.0.1
 flask-migrate==4.1.0
 flask-sqlalchemy==3.1.1
+flask-swagger-ui==5.21.0
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -23,14 +26,18 @@ jinja2==3.1.6
 jiter==0.12.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 langchain-core==1.1.0
 langchain-openai==1.1.0
 langsmith==0.4.47
 librt==0.6.2
 mako==1.3.10
 markupsafe==3.0.3
+mistune==3.1.4
 mypy==1.19.0
 mypy-extensions==1.1.0
+numpy==2.3.5
 openai==2.8.1
 orjson==3.11.4
 packaging==25.0
@@ -42,9 +49,12 @@ pydantic-core==2.41.5
 python-dotenv==1.2.1
 pytokens==0.3.0
 pyyaml==6.0.3
+referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+rpds-py==0.30.0
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 sqlalchemy==2.0.44
