--- a/frontend/client-app/package.json
+++ b/frontend/client-app/package.json
@@ -24,7 +24,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^2.15.4",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
