--- a/frontend/client-app/package.json
+++ b/frontend/client-app/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
